# otopoiesis_old

./: Cargo.toml  readme.md
src/: core.rs  gui.rs  lib.rs  main.rs  utils.rs
src/app/: mod.rs
src/audio/: mod.rs
src/gui/: mod.rs  oscilloscope.rs  waveform.rs
