[package]
name = "otopoiesis"
version = "0.1.0"
authors = ["Tomoya Matsuura <me@matsuuratomoya.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cpal = "0.13"
iced = {version = "0.3", features = ["canvas"]}
iced_native = "0.4"
iced_wgpu = "*"
anyhow = "*"
# iced_audio = "0.7"
atomic_float = "0.1"
crossbeam = "0.8"